--- a/light-projects/demo/qq-bot/bot.example.toml
+++ b/light-projects/demo/qq-bot/bot.example.toml
@@ -7,4 +7,7 @@ passwd = "demo_passsword" # 机器人的 QQ密码
 demo_QQ_Group = 1234567890
 
 [friend] # QQ好友
-demo_QQ_Friend= 1234567890
+demo_QQ_Friend = 1234567890
+
+[openAPI.AUTONAVI] # 高德导航开放平台天气 API
+key = ""
